[package]
name = "location"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
axum = "0.7.5"
chrono = "0.4.38"
reqwest = "0.12.4"
openssl = {version = "0.10.64", features = ["vendored"] }
serde = { version ="1.0.200", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "fs"] }
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1.40"
tracing-axiom = "0.6.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
